# wofford_cosc_projects

350 Projects/: DuplicateFileFinder.py  copyfiles.py  flower.py
350 Projects/Array Functions/: CMakeLists.txt  arrayfunctions.cpp  arrayfunctions.h  main.cpp
350 Projects/List ADT Linked Implementation/: list.cpp  main.cpp
350 Projects/List ADT Project/: CMakeLists.txt  list.h
350 Projects/Project 2/: main.py  sorting.py  timings.xlsx
350 Projects/Project 3/: cosc350.py  graph1.txt  graph2.txt  graphinfo.py  graphs.py  main.py
350 Projects/Project8/: sudoku.cpp
350 Projects/Sudoku/: sample.txt
9 Puzzle Board/: README.md  Sergio Sum Project 1.txt  brendonpuzzle.py  ninepuzzle.py
Artificial Intelligence/9 Puzzle Board/: ninepuzzle2.py  ninepuzzle_test.py
Artificial Intelligence/N-Grams Project/: README.md  david_copperfield.txt  moby_dick.txt  oliver_twist.txt  text_gen.py  text_gen_tests.py
Assignments/: 8and10.py  archery.py  deck robbie.py  deck.py  greet.py  house.py  image  image.py  invest.py  numerology.py  pi.py  solve.py  sphere.py
COSC 351/: final project paper.docx
COSC 351/Circular Queue/: CMakeLists.txt  circularqueue.h  main.cpp
COSC 351/DoublyLinkedList/: CMakeLists.txt  doublylinkedlist.c  main.c  (+1 more)
Databases Projects/: COSC330 Group Choices - Olympics.csv  olympics.my.sql  olympics.py  olympics.sql
List ADT Linked Implementation/: CMakeLists.txt  list.h
List ADT Project/: list.cpp
Project8/: CMakeLists.txt  almost_solved.txt  main.cpp  sudoku.h  sudokusolver.cpp  sudokusolver.h
Sudoku/: main.py  sudoku.py  sudokusolver.py
(+18 files in other folders)
